--- a/react/package.json
+++ b/react/package.json
@@ -22,6 +22,7 @@
     "@material-ui/icons": "^4.9.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "classnames": "^2.2.6",
     "joi": "^17.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
